--- a/starter/03-CSS-Fundamentals/style.css
+++ b/starter/03-CSS-Fundamentals/style.css
@@ -1,5 +1,43 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   color: red;
+  border-top: 10px solid #1098ad;
+}
+.container {
+  width: 800px;
+  /* margin-left: auto;
+  margin-right: auto; */
+  margin: 0 auto;
+}
+
+nav {
+  font-size: 18px;
+}
+article {
+  margin-bottom: 60px;
+}
+.main-header {
+  background-color: #f7f7f7;
+  /* padding: 20px;
+  padding-left: 40px;
+  padding-right: 40px; */
+  padding: 20px 40px;
+  margin-bottom: 60px;
+  height: 80px;
+}
+.post-header {
+  margin-bottom: 40px;
+}
+aside {
+  background-color: #f7f7f7;
+  border-bottom: 5px solid #1098ad;
+  border-top: 5px solid #1098ad;
+  padding: 50px 0;
+  width: 500px;
 }
 
 h1,
@@ -25,9 +63,12 @@ h1 {
 }
 h2 {
   font-size: 40px;
+  margin-bottom: 30px;
 }
 h3 {
   font-size: 30px;
+  margin-bottom: 20px;
+  margin-top: 40px;
 }
 h4 {
   font-size: 20px;
@@ -37,11 +78,21 @@ h4 {
 p {
   font-size: 22px;
   line-height: 1.5;
+  margin-bottom: 15px;
 }
-li {
-  font-size: 20px;
+ul,
+ol {
+  margin-left: 50px;
+  margin-bottom: 20px;
 }
 
+li {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+li:last-child {
+  margin-bottom: 0;
+}
 /* footer p {
   font-size: 16px;
 } */
@@ -69,20 +120,6 @@ li {
 
 .un-list-removal {
   list-style: none;
-}
-
-.main-header {
-  background-color: #f7f7f7;
-}
-
-aside {
-  background-color: #f7f7f7;
-  border-bottom: 5px solid #1098ad;
-  border-top: 5px solid #1098ad;
-}
-
-body {
-  /* background-color: #c8c4c4; */
 }
 
 /* .first-li {
@@ -142,6 +179,7 @@ footer p {
   color: green;
 } */
 
-nav {
-  font-size: 18px;
+.post-img {
+  width: 100%;
+  height: auto;
 }
