--- a/starter/02-HTML-Fundamentals/style.css
+++ b/starter/02-HTML-Fundamentals/style.css
@@ -1,10 +1,17 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 body {
   border: 5px solid #000;
+  width: 500px;
+  margin: 50px auto;
 }
 h2 {
   text-align: center;
   background-color: #ddd;
   text-transform: uppercase;
+  padding: 10px;
 }
 
 .price {
@@ -16,6 +23,7 @@ h2 {
   text-transform: uppercase;
   font-weight: bold;
   color: #777;
+  margin-bottom: 10px;
 }
 
 .more-info:link,
@@ -31,9 +39,15 @@ h2 {
 
 .detail-title {
   text-transform: uppercase;
+  margin-bottom: 10px;
+  margin-top: 20px;
 }
 .detail-list {
   list-style: square;
+  margin-left: 20px;
+}
+.detail-list li {
+  margin-bottom: 10px;
 }
 
 .cart {
@@ -41,6 +55,8 @@ h2 {
   text-transform: uppercase;
   background-color: #000;
   color: white;
+  padding: 10px;
+  width: 100%;
 }
 .cart:hover {
   color: black;
