--- a/starter/02-HTML-Fundamentals/style.css
+++ b/starter/02-HTML-Fundamentals/style.css
@@ -6,6 +6,7 @@ body {
   border: 5px solid #000;
   width: 500px;
   margin: 50px auto;
+  position: relative;
 }
 h2 {
   text-align: center;
@@ -26,7 +27,10 @@ h2 {
   margin-bottom: 10px;
 }
 
-.more-info:link,
+.more-info:link {
+  display: inline-block;
+  margin-bottom: 30px;
+}
 .more-info:visited {
   color: #000;
   text-decoration: underline;
@@ -62,4 +66,32 @@ h2 {
   color: black;
   background-color: white;
   cursor: pointer;
+}
+.sale {
+  font-size: 5px;
+  background-color: red;
+  color: white;
+  font-weight: bold;
+  position: absolute;
+  top: -10px;
+  left: -30px;
+  letter-spacing: 2px;
+  padding: 5px;
+  display: inline-block;
+}
+
+.color {
+  background-color: #000;
+  width: 20px;
+  height: 20px;
+  margin-bottom: 0;
+  margin-right: 20px;
+  display: inline-block;
+}
+
+.color-red {
+  background-color: red;
+}
+.color-green {
+  background-color: green;
 }
