--- a/starter/03-CSS-Fundamentals/style.css
+++ b/starter/03-CSS-Fundamentals/style.css
@@ -1,17 +1,20 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-  color: red;
+  /* color: red; */
   border-top: 10px solid #1098ad;
+  position: relative;
 }
 .container {
-  width: 800px;
+  width: 1200px;
   /* margin-left: auto;
   margin-right: auto; */
   margin: 0 auto;
+  position: relative;
 }
 
 nav {
@@ -22,12 +25,13 @@ article {
 }
 .main-header {
   background-color: #f7f7f7;
+
   /* padding: 20px;
   padding-left: 40px;
   padding-right: 40px; */
   padding: 20px 40px;
   margin-bottom: 60px;
-  height: 80px;
+  /* height: 80px; */
 }
 .post-header {
   margin-bottom: 40px;
@@ -36,8 +40,7 @@ aside {
   background-color: #f7f7f7;
   border-bottom: 5px solid #1098ad;
   border-top: 5px solid #1098ad;
-  padding: 50px 0;
-  width: 500px;
+  padding: 50px 40px;
 }
 
 h1,
@@ -74,6 +77,7 @@ h4 {
   font-size: 20px;
   text-transform: uppercase;
   text-align: center;
+  margin-bottom: 30px;
 }
 p {
   font-size: 22px;
@@ -109,6 +113,17 @@ li:last-child {
   font-style: italic;
 }
 
+.author-img {
+  float: left;
+  margin-bottom: 20px;
+}
+.author {
+  margin-left: 20px;
+  margin-bottom: 0;
+  margin-top: 10px;
+  float: left;
+}
+
 .related-author {
   font-size: 18px;
   font-weight: bold;
@@ -120,6 +135,7 @@ li:last-child {
 
 .un-list-removal {
   list-style: none;
+  margin-left: 0;
 }
 
 /* .first-li {
@@ -182,4 +198,79 @@ footer p {
 .post-img {
   width: 100%;
   height: auto;
+}
+
+nav a:link {
+  /* background-color: orange;
+  margin: 20px;
+  padding: 10px;
+  display: block; */
+  margin-right: 30px;
+  margin-top: 10px;
+  /* margin-bottom: 20px; */
+  display: inline-block;
+}
+
+nav a:link:last-child {
+  margin-right: 0;
+}
+
+button {
+  font-size: 22px;
+  padding: 20px;
+  cursor: pointer;
+  position: absolute;
+  bottom: 50px;
+  right: 50px;
+}
+
+h1::first-letter {
+  font-style: normal;
+  margin-right: 5px;
+}
+
+h2 {
+  position: relative;
+}
+
+h2::after {
+  color: #000;
+  content: "TOP";
+  background-color: #f2bf81;
+  font-size: 16px;
+  font-weight: bold;
+  display: inline-block;
+  padding: 5px 10px;
+  position: absolute;
+  top: -10px;
+  right: -20px;
+}
+
+h1 {
+  float: left;
+}
+nav {
+  float: right;
+}
+.clearfix::after {
+  clear: both;
+  content: "";
+  display: block;
+}
+
+article {
+  /* background-color: green; */
+  width: 830px;
+  float: left;
+}
+
+aside {
+  /* background-color: red; */
+  width: 300px;
+  float: right;
+}
+
+footer {
+  /* background-color: yellow; */
+  clear: both;
 }
