--- a/starter/02-HTML-Fundamentals/style.css
+++ b/starter/02-HTML-Fundamentals/style.css
@@ -14,19 +14,23 @@ h2 {
   background-color: #ddd;
   text-transform: uppercase;
   padding: 10px;
+  grid-column: 1/ -1;
 }
 .product-img {
   /* margin-right: 20px; */
 }
 
 .product-info {
-  flex: 1;
+  /* flex: 1; */
   /* margin-right: 20px; */
   margin-top: 20px;
+  /* padding-top: 20px; */
 }
 .product-detail {
   margin-top: 20px;
-  flex: 1;
+  /* padding-top: 20px; */
+
+  /* flex: 1; */
 }
 
 .price {
@@ -72,7 +76,8 @@ h2 {
   background-color: #000;
   color: white;
   padding: 10px;
-  width: 100%;
+  grid-column: 1/ -1;
+  /* width: 100%; */
 }
 .cart:hover {
   color: black;
@@ -105,12 +110,6 @@ h2 {
   background-color: green;
 }
 
-.row {
-  display: flex;
-  align-items: flex-start;
-  /* justify-content: space-between; */
-  gap: 40px;
-}
 .color-pick {
   display: flex;
   gap: 20px;
@@ -120,4 +119,11 @@ h2 {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 20px;
+}
+.grid-container {
+  display: grid;
+  grid-template-columns: 250px 1fr 1fr;
+  column-gap: 30px;
+  /* margin-top: 20px; */
 }
