--- a/starter/05-Design/style.css
+++ b/starter/05-Design/style.css
@@ -4,6 +4,9 @@ SPACING SYSTEM (px)
 
 FONT SIZE SYSTEM (px)
 10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
+
+MAIN COLOR: #087f5b
+GREY COLOR: #343a40
 */
 
 * {
@@ -17,6 +20,8 @@ FONT SIZE SYSTEM (px)
 /* ------------------------ */
 body {
   font-family: "Inter", sans-serif;
+  color: #343a40;
+  border-bottom: 8px solid #087f5b;
 }
 
 .container {
@@ -34,6 +39,29 @@ h2 {
   /* 24 / 30 / 36 */
   font-size: 36px;
   letter-spacing: -0.5px;
+}
+
+.btn:link,
+.btn:visited {
+  background-color: #087f5b;
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: 500;
+
+  display: inline-block;
+}
+.btn:hover,
+.btn:active {
+  background-color: #099268;
+}
+.btn--big {
+  font-size: 18px;
+  padding: 16px 32px;
+}
+.btn--small {
+  font-size: 14px;
+  padding: 8px 12px;
 }
 
 .grid-3-cols {
@@ -64,6 +92,7 @@ h1 {
   font-size: 44px;
   line-height: 1;
   letter-spacing: -1px;
+  text-shadow: 0 20px 30px rgba(0, 0, 0, 0.2);
 }
 
 .header-text {
@@ -78,6 +107,10 @@ img {
 
 /* FEATURES */
 .features-icon {
+  stroke: #087f5b;
+  width: 32px;
+  height: 32px;
+  margin-bottom: 16px;
 }
 
 .features-title {
@@ -92,6 +125,9 @@ img {
 
 /* TESTIMONIAL */
 .testimonial-section {
+  background-color: #087f5b;
+  color: #fff;
+  padding: 24px;
 }
 
 .testimonial-box {
@@ -113,6 +149,10 @@ img {
 }
 
 /* CHAIRS */
+.chair {
+  box-shadow: 0 20px 30px 0px rgba(0, 0, 0, 0.1);
+}
+
 .chair-box {
   padding: 24px;
 }
@@ -139,6 +179,9 @@ h3 {
 }
 
 .chair-icon {
+  stroke: #087f5b;
+  width: 24px;
+  height: 24px;
 }
 
 .chair-price {
@@ -150,4 +193,5 @@ h3 {
 footer {
   margin-bottom: 48px;
   font-size: 14px;
+  color: #495057;
 }
